[package]
name = "example"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
exclude = ["tests/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.10"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"

[lib]
crate-type = ["cdylib", "lib"]
